@@ -1,0 +1,3 @@
+#!/usr/bin/perl -w
+
+print "3.0.7\n" if $ARGV[0] eq '-version';
