@@ -4,44 +4,37 @@
 
 use strict;
 use Test::More tests => 17;
+use File::Spec::Functions;
 
 BEGIN { use_ok('App::Info::RDBMS::SQLite') }
 
-ok( my $sqlite = App::Info::RDBMS::SQLite->new, "Got Object");
+my $ext = $^O eq 'MSWin32' ? '.bat' : '';
+my $bin_dir = catdir 't', 'scripts';
+$bin_dir = catdir 't', 'bin' unless -d $bin_dir;
+my $lib_dir = catdir 't', 'testlib';
+my $inc_dir = catdir 't', 'testinc';
+
+ok( my $sqlite = App::Info::RDBMS::SQLite->new(
+    search_bin_dirs  => [$bin_dir],
+    search_exe_names => ["sqlite3$ext"],
+    search_lib_dirs  => [$lib_dir],
+    search_inc_dirs  => [$inc_dir],
+), "Got Object");
+
 isa_ok($sqlite, 'App::Info::RDBMS::SQLite');
 isa_ok($sqlite, 'App::Info');
 is( $sqlite->key_name, 'SQLite', "Check key name" );
 
-
-if ($sqlite->installed) {
-    ok( $sqlite->installed, "SQLite is installed" );
-    is( $sqlite->name, 'SQLite', "Got name" );
-    ok( $sqlite->version, "Got version" );
-    ok( $sqlite->major_version, "Got major version" );
-    ok( defined $sqlite->minor_version, "Got minor version" );
-    ok( defined $sqlite->patch_version, "Got patch version" );
-    if ($sqlite->bin_dir) {
-        ok( $sqlite->bin_dir, "Got bin_dir" );
-        ok( $sqlite->lib_dir, "Got lib dir" );
-        ok( $sqlite->so_lib_dir, "Got so lib dir" );
-        ok( $sqlite->inc_dir, "Got inc dir" );
-    } else {
-        ok( !$sqlite->bin_dir, "Don't got bin_dir" );
-        ok( !$sqlite->lib_dir, "Don't got lib dir" );
-        ok( !$sqlite->so_lib_dir, "Don't got so lib dir" );
-        ok( !$sqlite->inc_dir, "Don't got inc dir" );
-    }
-} else {
-    ok( !$sqlite->installed, "SQLite is not installed" );
-    ok( !$sqlite->name, "Don't got name" );
-    ok( !$sqlite->version, "Don't got version" );
-    ok( !$sqlite->major_version, "Don't got major version" );
-    ok( !$sqlite->minor_version, "Don't got minor version" );
-    ok( !$sqlite->patch_version, "Don't got patch version" );
-    ok( !$sqlite->lib_dir, "Don't got lib dir" );
-    ok( !$sqlite->bin_dir, "Don't got bin_dir" );
-    ok( !$sqlite->so_lib_dir, "Don't got so lib dir" );
-    ok( !$sqlite->inc_dir, "Don't got inc dir" );
-}
-ok( $sqlite->home_url, "Get home URL" );
-ok( $sqlite->download_url, "Get download URL" );
+ok( $sqlite->installed, "SQLite is installed" );
+is( $sqlite->name, "SQLite", "Get name" );
+is( $sqlite->version, "3.0.7", "Test Version" );
+is( $sqlite->major_version, '3', "Test major version" );
+is( $sqlite->minor_version, '0', "Test minor version" );
+is( $sqlite->patch_version, '7', "Test patch version" );
+is( $sqlite->lib_dir, $lib_dir, "Test lib dir" );
+is( $sqlite->bin_dir, $bin_dir, "Test bin dir" );
+is( $sqlite->so_lib_dir, $lib_dir, "Test so lib dir" );
+is( $sqlite->inc_dir, $inc_dir, "Test inc dir" );
+is( $sqlite->home_url, 'http://www.sqlite.org/', "Get home URL" );
+is( $sqlite->download_url, 'http://www.sqlite.org/download.html',
+    "Get download URL" );
